applications/client/gocd/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gocd
spec:
  parentRefs:
    - group: gateway.networking.k8s.io	
      kind: ListenerSet
      name: gocd
  hostnames:
  - gocd.jynolen.fr
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: gocd-server
          port: 8153
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
